--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         
         <section class="info-section">
             <h2>Historical Background</h2>
-            <p>The Koehler gun, invented in the late 18th century, could fire at extreme angles from -70° depression to +48° elevation. This was revolutionary—ordinary cannons couldn't fire below -10°.</p>
+            <p>The cannon described is a revolutionary military device because its "depressing carriage" allows it to be aimed at a much greater variety of angles, from steeply down ($70^\circ$ depression) to high up ($45^\circ$ elevation), unlike standard guns which were very limited. For the crew, loading was made safe and easy by a spindle that turned the cannon sideways, allowing one person to load the shot while staying protected. Most importantly, the cannon's design allowed it to recoil on a slide and return automatically to its original firing position, eliminating the heavy manual labor of repositioning the gun after every shot. This accurate, straight-line recoil was key to its superior accuracy, which was so effective that it could consistently hit small targets over very long distances.</p>
             
             <div class="quote">
                 "A gun upon the depositing carriage can be fired at an angle of 70° at depression... whereas a common one can not be fired at greater depression than 10°."
