--- a/index.html
+++ b/index.html
@@ -290,10 +290,9 @@
             
             <h2 style="margin-top: 20px;">How It Worked</h2>
             <ul style="margin-left: 20px; margin-top: 10px;">
-                <li>Rotated on a spindle for easy loading</li>
-                <li>Could fire downward from elevated positions</li>
-                <li>Sliding bed absorbed recoil</li>
-                <li>Returned to exact position after firing</li>
+                <l>This interactive exhibit brings to life a brilliant18th-century artillery innovation through its original archival record. The displayed document is a letter from military engineer George Fredk. Koehler in April 20, 1785, which details the technical specifications and advantages of his revolutionary "depressing carriage" cannon. The project turns this primary source (a textual blueprint) into an accessible digital experience that shows not just what the cannon did, but how it fundamentally changed the mechanics and psychology of siege warfare.
+
+The historical significance of Koehler’s invention goes beyond its immediate technical improvements. It shows a pivotal moment in the professionalization of military engineering, where empirical observation, mechanical innovation, and written documentation converged to solve militarization problems. The gun’s ability to maintain precise aim after firing (a feature Koehler emphasizes heavily in the letter) meant that artillery could evolve from an full coverage weapon into a precision instrument. This shift required gunners to think less about brute force and manual recovery, and more about sustained accuracy. By allowing us to change the cannon’s angle in ways that previously couldn’t and witness its trajectory, this interactive model demonstrates how the physical constraints of elevation and depression directly impacted battlefield strategy. Ultimately determing which positions could be attacked and from where. Thus this project uses digital public history to bridge the gap between a handwritten report and the tangible experience of historical innovation, showing how material design shapes military and historical outcomes.</p>
             </ul>
         </section>
     </div>
